2024 recap should be done now

--- a/app/blog/posts/2024-recap.mdx
+++ b/app/blog/posts/2024-recap.mdx
@@ -8,33 +8,47 @@ In 2024 I went deeper and deeper into the crypto, particularly Farcaster, commun
 
 I started off the year with an awesome opportunity to build Farcaster-related software at [Neynar](https://neynar.com), which I had the pleasure of doing for nine months. I was able to work on their [no-code frame studio](https://neynar.com/nfs), [React SDK](https://github.com/neynarxyz/react), [Explorer](https://explorer.neynar.com) and more -- but most importantly I was able to learn from a top-class team and stay closely involved in the Farcaster ecosystem. I'm very grateful for the work I was able to do there and it's pushed me to develop my skills more than any role so far has.
 
-I was also part of the team that organized FarCon '24 in Venice Beach and led the [inaugural FarHack](https://farhack.xyz/hackathons/farhack-at-farcon-2024) there([full recap of both](farcon-and-farhack-2024)). Those few days were one of the most fufilling and gratifying times of my life, not just seeing all of that work coming to fruition but also seeing how special this community and the people in it are. And speaking just on FarHack itself, I couldn't have asked for a better turn-out: the projects were amazing, builder energy was super high, and folks were so into the hackathon that the finale on that Sunday was filled with non-developers who just wanted to support the community.
+I was also part of the team that organized FarCon '24 in Venice Beach and led the [inaugural FarHack](https://farhack.xyz/hackathons/farhack-at-farcon-2024) there([full recap of both](farcon-and-farhack-2024)). Those few days were one of the most fulfilling and gratifying times of my life, not just seeing all of that work coming to fruition but also seeing how special this community and the people in it are. And speaking just on FarHack itself, I couldn't have asked for a better turn-out: the projects were amazing, builder energy was super high, and folks were so into the hackathon that the finale on that Sunday was filled with non-developers who just wanted to support the community.
 
 Following the first FarHack, myself and [Luciano](https://warpcast.com/luciano) got some inbound and ideas about future FarHacks -- and I put together a v1 of our [hackathon software](https://github.com/farhackxyz/farhack) to use at Edcon in Tokyo as well as Ethereum Singapore. We were also fortunate to have receieved a Base Builder grant for our hackathon software that featured onchain ticketing on Base.
 
+![FarHack.xyz hackathon software as of Jan 2025](https://res.cloudinary.com/dz3c2rl2o/image/upload/v1736182292/media/farhack-software-ss-jan-25.png)
+
 Throughout all of this I also dealt with some big personal changes: leaving school once and for all and returning home to New York. It became pretty clear to me as some of my work earlier in the year ramped up that this was the right time to jump off the deep end, and separately as much as I loved where I was in LA I just felt as though I was missing the community and lifestyle that I have back in New York. And so while decisions about school and my living situation have always been a bit contentious, this time around everything felt just right.
 
-At the end of the year once my work stopped and I had some time to myself I began doing some [redacted] freelancing work, as well as moving my attention to [Cortex](https://withcortex.com). When I was in high school/early into college I was very keen on calling Cortex a browser/OS research project, as that's what it all stemmed from, but I knew this time around I had to make Cortex into some actual product before thinking about any sort of research etc.
+At the end of the year once my work stopped and I had some time to myself I began doing some [redacted] freelancing work, as well as moving my attention to [Cortex](https://withcortex.com). When I was in high school/early into college I was very keen on calling Cortex a browser/OS research project, as that's [what it all stemmed from](/blog/tools-for-action), but I knew that before anything else I just needed to make Cortex **an actual product**, even if it's not in that realm at first, and then decide what to do with the name or project afterwards.
 
-And so I set out to make Cortex into a Grok/Perplexity-style assistant but for Farcaster -- it has a set of tools that lets users ask about live content as well as data in adjacent apps(such as Events.xyz, Bountycaster, Clanker, and more). While I separately want to find time to focus on the browser/OS work, I will say that I've enjoyed building & using Cortex as it is right now and am happy I can refer to an actual product instead of a vague research idea whenever I talk about Cortex.
+And so I set out to make Cortex into a Grok/Perplexity-style AI assistant but for Farcaster. It has a set of tools that lets users ask about live content as well as data in adjacent apps(such as Events.xyz, Bountycaster, Clanker, and more). While I separately **really** want to find time to focus on the browser/OS work that interests me the most, I will say that I've enjoyed building & using Cortex as it is right now and am happy I can refer to an actual product instead of a vague research idea whenever I talk about Cortex.
+
+![Cortex chat as of Jan 2025](https://res.cloudinary.com/dz3c2rl2o/image/upload/v1736054222/media/cortex-farcaster-chat-jan-25.png)
 
 So where does that takes us going into 2025? For one I'm on the hunt for what's next for me and am hoping to have that sorted out soon, I'm wrapping up some contracting/personal work, and I'm thinking about where to take my Cortex work.
 
-The dilemma I often find myself in with crypto is that on one had there's always low-hanging fruit that could be helpful in a field like crypto, but on the other hand there are much larger audiences to reach and so much more exicting tech in the world other than just crypto to be making use of. I keep finding myself crawling back to crypto ideas and saying I need to just crypto-ify everything anyways, but I'd be remiss if I didn't say that I *really* want to find a way to reach for that north star of browser/OS work, whatever shape that might take right now.
+The dilemma I often find myself in with crypto is that on one had there's always low-hanging fruit that could be helpful in a field like crypto, but on the other hand there are much larger audiences to reach and so much more exicting tech in the world other than just crypto to be making use of -- and in particular a large area of intersest in browsers/OS that I really want to tackle. I keep finding myself crawling back to crypto ideas and saying I need to just crypto-ify everything anyways, but I'd be remiss if I didn't say that I *really* want to find a way to reach for that north star of browser/OS work, whatever shape that might take right now. So hopefully 2025 will be filled both with exploring/building great things in crypto as well as making space for my browser/OS work and trying to turn that into something tangible.
 
-But whichever way my projects turn out, I'm confident that 2024 has given me the skills and perseverance to figure out what steps I need to take.
+But whichever way my projects turn out, I'm confident that 2024 has given me the skills and perseverance to figure out what steps I need to take and I couldn't be more excited to start hitting the ground running in 2025.
 
 ## Forecast
 Here are some trends that I see for 2025:
 
-**The best AI _interfaces_ will win**.
+**The best AI _interfaces_ will win**. In 2024 we saw even more progress in LLMs, especially in open-source models like Llama and most recently DeepSeek that make it easier than ever for developers to build on. However what we haven't seen as much of, and what isn't as commoditized, is a set of highly integrated and impactful LLM interfaces. Obviously ChatGPT/Perplexity are good examples and certain pockets have their own products(eg. Notion AI/Deep Research for productivity, Copilot/Cursor's agent for coding, etc), but some of the companies with the most vertical integration like Apple have really flopped at their products/lack of products. In 2025 I hope to see new apps(and maybe even hardware products) that find new ways to leverage LLMs in everyday life.
+
+**Stablecoins and meme assets will become even more mainstream**. While 2024 was arguably the biggest year yet for crypto's growth and regulatory acceptance(particularly in the US), I think 2025 is going to be a pivotal year in getting more people and institutions to use crypto in their products. Companies such as SpaceX have already started using stablecoins for international payments with low fees and given how much usage stablecoins already got in 2024, I feel as though this could be a breakout year where we see a surge in stablecoins being used by businesses and individuals to receive payments. In addition I think that as we see more AI x Crypto projects, like the agents that were involved in some of the most exciting memecoins of 2024, meme assets will become even more normalized. Especially with integrations on social media platforms like Farcaster and X, I think these coins have the opportunity to create even larger markets for trends and content that might've already had a small market/value beforehand.
+
+**AI powered app builders like [v0](https://v0.dev) are going to kill any remaining low/no-code tools in 2025, and a set of PMs are going to become powerful creators**. With how good LLM-based tools are getting at creating apps with full-fledged codebases and databases on the fly, I think both developers and non-developers with strong curation skills will be able to build viral and impactful apps. I don't think this is all leading to ephemeral software we're creating for a one-time use, but I think it'll make it even easier than before to either make a custom app for yourself instead of using some large platform like [Zapier](https://zapier.com)/[Airtable](https://airtable.com), as well as to come up with an idea and test it out in the market quickly.
+
+**Independent media is going to surge again**. I'm personally a big fan of independent media and folks being able to go direct to give not just raw opinions but also live updates(something I love X for) -- and while 2024 was a breakout year for the field in many ways I think those same effects will carry into 2025. The creator economy is growing with influencers getting streaming shows and D2C products at multi-billion dollar valuations, TV hosts are leaving legacy media in favor of their own shows or Substacks, and I think people are growing tired of the same talking points. I don't mean all of this to come as a big attack to legacy media and it'll still be around in some form, but I think this shows the power any sort of influencer can now have online and across many different channels.
 
 ## My 2025
 Here are some things I hope for myself in 2025:
 
-**Create more media**. I really enjoy writing blog posts and making videos, especially as a way to tell a particular narrative. I spend a lot of my time listening to music and watching others to use media to tell their own story, whether it's in entertainment or a new wave of startups using media, and feel really compelled to keep this up not just as a general practice but also to tell very particular stories that I've wanted to for a while(a lot of the browser stuff comes to mind here).
+**Create more media**. I really enjoy writing blog posts and making videos, especially as a way to tell a particular narrative. I spend a lot of my time listening to music and watching others to use media to tell their own story, whether it's in entertainment or a new wave of startups using media, and feel really compelled to keep this up not just as a general practice but also to tell very particular stories that I've wanted to for a while(I __especially__ hope this results in me focusing on telling the story of the browser/OS work I'm into). And finally, I'm excited to continue hosting [The Hub](https://www.youtube.com/playlist?list=PLrsgGZ0hNAouP4bOxE1SV3Pmydq5VHobn), a Farcaster developer-focused podcast that I started on the [GM Farcaster network](https://www.youtube.com/@GMFarcaster) a few months ago -- which I think is a great way to share stories/news with top builders, as well as work on my own media skills and portfolio.
 
 **Go to more live experiences**. This year in particular I missed out on a few concerts I would've loved to go to from artists I follow closely: Kendrick Lamar's Pop Out show on Juneteenth in LA, Tyler the Creator's pop-up listening party for Chromakopia this past October in Brooklyn, and Kaytranada's world tour. Missing these shows and having amazing times at other experiences(particularly FWB Fest which really opened my eyes) made me realize how much I cherish live experiences, especially when it involves music and communities that I love.
+
+**Build products that people use**. Hopefully this one should sound obvious because I don't think people in tech want to build things that __aren't__ used, but in particular while I've really enjoyed building what I have so far and some of it has gotten some good traction, I want to experience my projects/projects I work on going through a type of growth I haven't experienced before. I think higher scale gives you a new set of problems to work on and thinking of an idea that can reach that scale requires new lines of thought and problem solving.
+
+**Pay more attention to my health and life outside of tech**. I'm a particularly happy and healthy person but I also know I'm the type of person that can get so deep in a project or field of thought that I can easily neglect my personal life or things such as my health. And while I improved on this balance a bit more in 2024(making more room for sports, seeing friends/going out more, etc) it's always something to keep in check -- and particularly on the health front I feel as though I can push myself even more to find certain workout classes or stick to a solid routine.
 
 <Gallery id="2024-recap-best" />
 
