blog: The FarStack post

--- a/app/blog/posts/the-farstack.mdx
+++ b/app/blog/posts/the-farstack.mdx
@@ -44,21 +44,18 @@ What makes Frames v2 so powerful is how they completely reshape app distribution
 
 ## How the FarStack came together
 
-The FarStack didn't just appear overnight — it's the result of solid foundational work and years of growth both at the protcol and app level that push Farcaster's technical requirements forward.
+The FarStack didn't just appear overnight — it's the result of solid foundational work and years of growth both at the protcol and app level that pushed Farcaster's technical requirements forward.
 
 The team wisely started by solving identity first. By anchoring IDs onchain but keeping the messages off-chain, they created a system that gives users true ownership without sacrificing the speed we expect from modern apps. Hubs (and now Snapchain) evolved as clever solutions for fast message propagation without constant blockchain transactions.
 
-What I find most impressive about the FarStack is its developer-friendly approach. Through clean APIs, well-documented SDKs, and active community spaces like the /fc-devs channel, the ecosystem makes it surprisingly easy for builders to contribute. When Frames launched in early 2024, this developer momentum exploded—suddenly there was a native distribution channel baked directly into the social layer.
-
-Like Ethereum's EIP process, Farcaster evolves through community-driven proposals(FIPs), balancing innovation with backward compatibility. This thoughtful evolution has created a stack where each component—from the blockchain foundation to the client apps—fits together like Lego bricks, letting innovation come from anywhere in the ecosystem.
+What I find most impressive about what we now call the FarStack is the response from the Farcaster developer community to make tools -- from docs to starter repos from language-specific libraries to entire developer platforms -- easier to use. All of this plus Farcaster-adjacent teams paying attention and finding smart ways to fit into developers' stacks(Base and Privy are great examples of this to me) has made the stack more all-encompassing, easier to use, and sometimes a bit much to keep up with because of how fast things are moving!
 
 ## Farcaster build season
 
 We're definitely in "Farcaster build season" right now—a period where *serious* teams are committing real resources to building on the protocol. I'm seeing experienced founders and well-funded companies choosing Farcaster as their platform, which signals something important is happening for both the protocol and consumer crypto more broadly.
-This build momentum is creating exactly the kind of virtuous cycle the ecosystem needs: more apps → more users → more developers → more apps. What makes the FarStack special is how each new application can instantly leverage the existing identity and social graph, letting teams build and iterate at Web2 speed while delivering Web3 ownership.
 
-For consumer crypto adoption, Farcaster might be the breakthrough we've been waiting for. By making user experience the priority while preserving the ownership benefits of Web3, it addresses the key friction points that have held back mainstream adoption. The ability for users to discover applications through Frames, sign in across services with their Farcaster identity, and own their data represents a fundamentally new paradigm.
+Two things in particular excite me about this Farcaster build season:
+1) A plethora of different teams are building on Farcaster for different reasons, whether that's to strengthen something onchain, test out new ideas, or use the power of onchain and social to onboard/bring crypto to an entirely new set of people. 
+2) AI developer tooling and the number of developer resources overall in the FarStack are improving so much that it'll let even more people see firsthand the promise of building tools that have the net-new distribution that platforms like v2 frames give you.
 
-What excites me most is how this approach bridges the gap between crypto natives and regular users. Teams are building apps that appeal to broad audiences—games, utilities, commerce platforms—but with blockchain superpowers running in the background. This "crypto when it matters" approach lets users enjoy the benefits of being onchain without needing to understand all the technical details.
-
-As the FarStack continues to grow, I believe we're witnessing the emergence of a new model for consumer applications—built on open protocols, user ownership, and composable experiences. This combination of traditional web performance and UX with onchain ownership principles could finally be the key that unlocks mainstream crypto adoption beyond speculation.
+This momentum is creating exactly the kind of virtuous cycle that keeps ecosystems like the FarStack's up and running: more apps → more users → more developers → more apps.
